Modernize the property caching code, for issue #3101
Rewrite the two property caching switches and the semantic connection
property cache with Java 21 idioms: pattern matching for instanceof
instead of cast chains, var for locals whose type is evident, records
with an enum severity plus an arrow switch for the deferred diagnostics,
Map.computeIfAbsent instead of a hand-rolled get-or-create helper,
String.formatted for the repeated constant-override message, and
getFirst and getLast instead of index arithmetic.

Loops over EcoreUtil.getAllProperContents now go through a small
Iterable wrapper so they can be enhanced for statements, and the long
methods delegate to named helpers for instantiating reference values,
checking consistency along a connection, and mapping the modes of a
modal value to system operation modes.

Lookups in SCProperties no longer create the intermediate maps they
traverse, so a miss no longer inserts two empty maps into the cache.
The accessor for a connection instance can therefore return null where
a previous lookup used to leave an empty map behind; its only caller is
commented out. Drop the dead local for the unused default value, replace
two direct writes to System.out with OsateDebug so that they honor the
debug flag like the neighboring method, and call the inherited error
method instead of going through the error manager, which is the same
call.

Cached values, diagnostic messages, and diagnostic severities are
unchanged, and the public and protected API of the three classes is the
same, so the API baseline is preserved.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>